--- a/src/modules/u4m-case-study-slider.module/module.scss
+++ b/src/modules/u4m-case-study-slider.module/module.scss
@@ -9,7 +9,7 @@
   padding: 58rem 0;
   .introContent h4 {
     margin: 0 0 50px;
-    font-size: 24rem;
+    font-size: 28rem;
     line-height: 1.2;
   }
   .case_large_bg {
@@ -81,7 +81,7 @@
     max-height: 640px;
   }
   .case_large_card {
-    background: $greybg;
+    background: $white;
     border-radius: 12rem;
     padding: 75rem 48rem 48rem;
     width: 100%;
