--- a/src/modules/u4m-integrations-hubdb-listing.module/module.scss
+++ b/src/modules/u4m-integrations-hubdb-listing.module/module.scss
@@ -7,11 +7,12 @@ section.u4m-inteHub-listing {
     margin: 0;
   }
   .filter_sidebar {
-    width: 150px;
+    min-width: 150px;
+    width: calc(100% - 1068px);
     max-width: 100%;
 
     @include tabletmid {
-      width: 250px;
+      width: 200px;
     }
 
     @include tabletvert {
@@ -26,11 +27,12 @@ section.u4m-inteHub-listing {
   }
 
   .case_listing_column {
-    padding: 0 10px;
     width: calc(100% - 150px);
+    padding: 0 10px;
+    max-width: 1068px;
 
     @include tabletmid {
-      width: calc(100% - 250px);
+      width: calc(100% - 200px);
     }
 
     @include tabletvert {
@@ -62,7 +64,7 @@ section.u4m-inteHub-listing {
     width: 100%;
     align-items: center;
     &:after {
-      content: "";
+      // content: "";
       display: block;
       padding-bottom: 100%;
       transition: .3s;   
@@ -189,13 +191,18 @@ section.u4m-inteHub-listing {
         -webkit-appearance: none;
         text-transform: capitalize;
         display: block;
-        padding: 9px 0;
+        padding: 9px 24px;
         border: 2px solid transparent;
+        @include tabletvert {
+          padding: 9px;
+        }
       }
 
       &.active button {
         border-color: #b6b0a2;
-        padding: 9px 20px;
+        @include tabletvert {
+          padding: 9px 24px;
+        }
       }
     }
   }
